# mrcepid-filterbcf

./: .gitignore  Readme.developer.md  Readme.md  dxapp.json  pyproject.toml
filterbcf/: ingest_data.py  mrcepid-filterbcf.py
filterbcf/methods/: ingest_data.py  vcf_annotate.py  vcf_filter.py
filterbcf/vcf_annotate/: vcf_annotate.py
filterbcf/vcf_filter/: vcf_filter.py
resources/filterbcf/: filterbcf_resources.py  ingest_data.py
resources/filterbcf/vcf_annotate/: vcf_annotate.py
resources/filterbcf/vcf_filter/: vcf_filter.py
src/: mrcepid-filterbcf.py
test/: clean_pytest_temp.sh  test.py  test_vcf_annotate.py  test_vcf_filter.py
test/scripts/: generate_test_values.py
test/test_data/: anno1.tsv.gz.tbi  anno2.tsv.gz.tbi  test_input1_wgs.vcf.gz.tbi  test_input2_wgs.vcf.gz.tbi
test/test_data/expected_outputs/: test_input1.vcf.sites.vep.vcf.gz.csi  test_input1.vcf.sites.vep.vcf.gz_summary.html  test_input1.vcf.vep.tsv.gz.tbi  test_input2.vcf.sites.vep.vcf.gz.csi  test_input2.vcf.sites.vep.vcf.gz_summary.html
