[project]
name = "mrcepid-filterbcf"
version = "2.0.0"
description = "Filter a target BCF according to parameters set by MRC Epidemiology"
readme = "Readme.md"
requires-python = "~=3.8.10"
dependencies = [
    "dxpy==0.346.0",
    "general-utilities",
    "pysam~=0.22.1",
    "pytest==7.4.4",
    "pytest-cov~=5.0",
]

[tool.uv.sources]
general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", tag = "v1.5.2" }
