[project]
name = "mrcepid-filterbcf"
version = "2.0.2"
description = "Filter a target BCF according to parameters set by MRC Epidemiology"
readme = "Readme.md"
authors = [
    {name = "Eugene Gardner"},
    {name = "Alish Palmos"}
]
requires-python = ">=3.8.10,<3.9"
dependencies = [
    "dxpy==0.346.0",
    "general-utilities",
    "pysam~=0.22.1",
    "pytest==7.4.4",
    "pytest-cov~=5.0",
    "sh~=2.0.6"
]

[tool.uv.sources]
general-utilities = { git = "https://github.com/mrcepid-rap/general_utilities.git", tag = "bugfix/burden_chr7_dna_nexus_runs" }

[tool.coverage.run]
omit = [
    "test/*", # Exclude all test files
    "tests/*" # If your tests folder is named "tests"
]
